api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patrones-api
spec:
  strategy:          
    type: Recreate
  selector:
    matchLabels:
      app: patrones-api
  template:         
    metadata:
      labels:
        app: patrones-api
    spec:
      containers:
        - image: sergios21/patrones_api:latest
          name: patrones-api
          ports:
            - containerPort: 8080
              name: patrones-api
          readinessProbe:
            httpGet:
              path: /api/user/todos    
              port: 8080          
            initialDelaySeconds: 10 
            periodSeconds: 5       
          resources:                     
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
