front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patrones-front-service
  labels:
    app: patrones-front
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3000
      protocol: TCP
  selector:
    app: patrones-front
